# fftw3-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fftw/: Cargo.toml
fftw-src/: Cargo.toml  build.rs
fftw-sys/: Cargo.toml
fftw-sys/src/: fftw.rs
fftw/src/: error.rs  lib.rs  plan.rs  threading.rs  wisdom.rs
fftw/tests/: c2c.rs  c2c_aligned.rs  r2c.rs  r2c_aligned.rs  r2r.rs
fftw3/: Cargo.toml
fftw3-rs/: Cargo.toml
fftw3-rs-src/: Cargo.toml  build.rs
fftw3-rs-sys/: Cargo.toml  bindgen.sh
fftw3-rs-sys/src/: lib.rs
fftw3-rs/src/: array.rs  error.rs  lib.rs  threading.rs
fftw3-rs/tests/: c2c.rs  c2c_aligned.rs  r2c.rs  r2c_aligned.rs  r2r.rs
fftw3-src/: Cargo.toml
fftw3-sys/: Cargo.toml
fftw3-sys/src/: lib.rs
fftw3/src/: threading.rs
fftw3/tests/: c2c.rs  r2c_aligned.rs
