[package]
name = "fftw3-rs-src"
version = "0.8.6"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Russell Bentley <rbentley@cs.stonybrook.edu>"]
edition = "2018"

description = "Source of FFTW3"
repository = "https://github.com/SallySoul/fftw3-rs"
keywords = ["fftw", "fftw3", "rayon", "fft", "fast fourier transform"]
license = "GPL-2.0-or-later"

build = "build.rs"
links = "fftw3"

[features]
threading = []

[build-dependencies]
anyhow = "1.0.70"
cc = "1.0"
fs_extra = "~1.3.0"
ftp = "3.0"
zip = "0.6"
