[package]
name = "fftw3-rs-sys"
version = "0.8.6"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>", "Russell Bentley <rbentley@cs.stonybrook.edu>"]
edition = "2018"

description = "Unsafe wrapper of FFTW3"
repository = "https://github.com/SallySoul/fftw3-rs"
keywords = ["fftw", "fftw3", "rayon", "fft", "fast fourier transform"]
license-file = "../LICENSE.md"

[features]
default = ["source"]
system = []
source = ["fftw3-rs-src"]
threading = ["source", "fftw3-rs-src/threading"]
intel-mkl = ["intel-mkl-src"]

[dependencies]
libc = "0.2.142"
num-complex = "0.4.3"

[dependencies.fftw3-rs-src]
path = "../fftw3-rs-src"
optional = true

[dependencies.intel-mkl-src]
version = "0.8.1"
optional = true

[package.metadata.docs.rs]
no-default-features = true
features = ["system"]
